# rag-demo

./: .env.example  .gitignore  DEMO_PLAN.md  IMPLEMENTATION_PLAN.md  NEXT_STEPS.md  README.md  pyproject.toml
backend/: __init__.py  __main__.py  agent.py  degradation.py  inference.py  main.py  retrieval.py
config/: __init__.py  settings.py
docs/: M4_16GB_DEGRADATION.md  OLLAMA_SETUP.md  UI_COLOR_SCHEME.md  ai_daptiv_canonical_overview.md
frontend/: index.html
ingest/: __init__.py  __main__.py  chunk.py  repo.py  run.py  test_ingest.py  test_ingest.sh
